--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Olesia_OnTheBrink
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/LevelOnTheBrink/Level/OnTheBrink.OnTheBrink
-GameDefaultMap=/Game/LevelOnTheBrink/Level/OnTheBrink.OnTheBrink
+EditorStartupMap=/Game/LevelOnTheBrink/BP/UI/Main_Menu.Main_Menu
+GameDefaultMap=/Game/LevelOnTheBrink/BP/UI/Main_Menu.Main_Menu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
